# cpp-system-monitor

./: .gitignore  CMakeLists.txt  README.md  config.ini
include/: config.hpp  console_output.hpp  cpu_collector.hpp  data_aggregator.hpp  data_collector.hpp  ncurses_output.hpp
include/collectors/: memory_collector.hpp  network_collector.hpp
src/: config.cpp  console_output.cpp  cpu_collector.cpp  data_aggregator.cpp  main.cpp  memory_collector.cpp  ncurses_output.cpp  network_collector.cpp
src/collectors/: cpu_collector.cpp  memory_collector.cpp  network_collector.cpp
